fix overflow

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ html {
 }
 
 body {
+	position: fixed;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
